_sass/_mobile.scss
/* Mobile styling using plain CSS */

@media (max-width: 768px) {

    /* Sections */

    .bg-primary {
        padding: 0;
    }

    #fullpage {
    
        h2 {
            font-size: 22.5px;
        }
        
        p {
            font-size: 16px;
            max-width: 100%;
        }

        .btn {
            background: $prolikeyellow;
            color: $prolikeblue;
            font-weight: 700;
            border-radius: 0em;
            padding: 20px 30px;
            font-size: 18px;
        }
    }

    /* Navigation bar */

    .navbar {
        padding: 0 15px;
    }

    .col-sm-4 {
        height: 20px;
        width: auto;
        padding: 0;
    }

    #fp-nav.fp-right {
        display: none;
    }

    .contact {

        h1 {
            font-size: 18px;
        }

        a {
            font-size: 18px;
        }

        .row .col {
            margin-bottom: 50px;
        }
    }

    .modal-content ul li a {
        font-size: 2em !important;
    }

    .col-xs-6 {
        max-width: 50%;
        font-size: 15px !important;
        margin-bottom: 30px;


        a {
            font-size: 15px !important;
        }

        h1 {
            font-size: 15px;
        }

    }

}

